study-room-reservation-system/src/main/java/com/test/studyroomreservationsystem/exception/invalidvalue/InvalidValueException.java
package com.test.studyroomreservationsystem.exception.invalidvalue;

public interface InvalidValueException {
    String getMessage();
}
